# MuJoCo-WASM

./: .gitignore  CMakeLists.txt  README.md  build_windows.bat  index.html  index.js  index.json  main-genned.cc  make_wasm.bat  package-lock.json  package.json
.github/workflows/: main.yml
examples/: main.js  mujocoSceneLoader.js  mujocoUtils.js
examples/scenes/: generate_index.py  index.json  model_with_tendon.xml
examples/utils/: DragStateManager.js
public/: Grabber.js  buffer.js  example.html  main.js  mujoco_demo.js  mujoco_wasm.d.ts  mujoco_wasm.js  mujoco_wasm.wasm  simple.xml  threejs_demo.js
public/scenes/: humanoid.xml  index.json  simple.xml
src/: CMakeLists.txt  functions.py  main-genned.cc  main.cc  main.genned.cc  main.template.cc  mujoco_wasm.template.d.ts  parse_headers.py  parse_mjxmacro.py
src/old/: main.cc
